<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashActivity">
    <activity
        android:id="@+id/splashActivity"
        android:name="com.nonamer777.madlevel7task1.SplashActivity"
        android:label="@string/activity_label_splash"
        tools:layout="@layout/activity_splash">
        <action
            android:id="@+id/action_splashActivity_to_createProfileFragment"
            app:destination="@id/createProfileFragment" />
    </activity>
    <fragment
        android:id="@+id/createProfileFragment"
        android:name="com.nonamer777.madlevel7task1.CreateProfileFragment"
        android:label="@string/fragment_label_create_profile"
        tools:layout="@layout/fragment_create_profile">
        <action
            android:id="@+id/action_createProfileFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.nonamer777.madlevel7task1.ProfileFragment"
        android:label="@string/fragment_label_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>